<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Write_about_yourself"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textSize="40sp"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/Your_Name"
           android:textSize="20sp"
           android:layout_margin="10dp"/>
       <EditText
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/name"
           android:hint="@string/Your_Name"
           android:inputType="textPersonName"
           android:layout_margin="10dp"
           android:textSize="20sp"
           android:layout_weight="1"/>
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Your_Number"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/number"
            android:hint="@string/Your_Number"
            android:inputType="number"
            android:maxLength="10"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Your_BirthDate"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/birthdate"
            android:hint="@string/Your_BirthDate"
            android:inputType="number"
            android:maxLength="2"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Are_you_studing"
        android:textSize="30sp"
        android:textAlignment="center"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Yes"
            android:layout_marginEnd="20dp"
            android:id="@+id/yes"
            android:textSize="20sp"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No"
            android:layout_marginStart="20dp"
            android:id="@+id/no"
            android:textSize="20sp" />
    </RadioGroup>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/collegename"
        android:hint="Enter your college name"
        android:inputType="text"
        android:textSize="20sp"
        android:visibility="gone"
        android:layout_marginLeft="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/check"
        android:layout_gravity="center"
        android:text="Move"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"/>
</LinearLayout>